<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:background="@color/bg_setting">

    <wang.chillax.betterplay.cusview.ToolBar
        android:id="@+id/feed_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textSize="@dimen/system_main_text_size"
        android:paddingLeft="8dp"
        android:layout_gravity="start"
        android:text="@string/common_issue"
        android:id="@+id/common_issue"/>
    <EditText
        android:hint="@string/feed_hint"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:id="@+id/feed_msg"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/submit_feed"
        android:textSize="@dimen/system_main_text_size"
        android:background="@drawable/submit_shap"/>

</LinearLayout>